(Raster)

hmmmmmm oops over-zealous on the commit after bug report :)

-------------------------------------------------------------------------------

Tue Oct 19 19:24:53 PDT 1999
(Mandrake)

someone was a tad overzealous in their patching.

 aa = (int)st.st_nlink;
should have been...
 aa = (int)st.st_ino;

I suspect this broke during the OS/2 merge.  OS/2 maintainer guy, take a look
 at this.

-------------------------------------------------------------------------------

Tue Oct 19 23:22:55 EST 1999
(Christian)

The Return of The Ganymede Theme.


Replaced all previously colormodified images with
new ones, including these for red rootshells etc :)

Added full support for epplets.

Added a script that allows users to activate buttons
and that installs default pulldown menues. Just go to
the Ganymede directory and run ACTIVATE_BUTTONS.

Updated README and dox too. So please nobody send me
email anymore telling me that the pulldowns don't
work, ok? They do. Thanks.

-------------------------------------------------------------------------------

Wed Oct 20 11:38:40 PDT 1999
(Mandrake)

I broke a small portion of code in OS/2


-------------------------------------------------------------------------------

Wed Oct 20 11:43:14 PDT 1999
(Mandrake)

one more OS/2 patch.

-------------------------------------------------------------------------------

Wed Oct 20 12:40:52 PDT 1999
(Mandrake)

right.  I am the king of bad typing.

-------------------------------------------------------------------------------

Wed Oct 20 12:48:59 PDT 1999
(Mandrake)

one more typo

-------------------------------------------------------------------------------

Wed Oct 20 13:25:24 PDT 1999
(Mandrake)

new TODO file.  please take a look at http://enlightenment.org/todo.html
(the page that is generated by this file)

-------------------------------------------------------------------------------

Wed Oct 20 14:55:06 PDT 1999
(Mandrake)

Yet Another OS/2 patch
this time in misc.c